Build with bradcray/chapel try-static-stuff branch.
TODO: revert this after https://github.com/chapel-lang/chapel/pull/2106 is merged.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ before_script:
   - sudo apt-get update -qq
   - sudo apt-get install -qq tcsh
 script:
-  - bash ./util/build_and_test.bash
+  - export CHPL_GIT_URL=git://github.com/bradcray/chapel && export CHPL_GIT_BRANCH=try-static-stuff && bash ./util/build_and_test.bash
